// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HOC withProps Should have mapped props 1`] = `
<DocumentFragment>
  <span>
    bar
  </span>
</DocumentFragment>
`;

exports[`HOC withProps Should override mapped props 1`] = `
<DocumentFragment>
  <span>
    bar-bar
  </span>
</DocumentFragment>
`;
